metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Account this Seller is associated with.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Sellers</relationshipLabel>
    <relationshipName>CC_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>