metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__DefaultRep__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DefaultRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When set, any orders that are split orders as applied to a specific seller will be set such that the owner of the split order will be this user.</description>
    <label>Default Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SellerReps</relationshipName>
    <type>Lookup</type>
</CustomField>