metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__Location__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Location__c</fullName>
    <description>Latitude and Longitude of this Seller. This is used for determining the distance from a user searching for Sellers near them.</description>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>