metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__Logo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Logo__c</fullName>
    <description>URL to the Seller logo for displaying on the Seller Detail page as well as in Seller listings.</description>
    <label>Logo</label>
    <type>Url</type>
</CustomField>