metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__LongDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LongDesc__c</fullName>
    <description>HTML content that displays on the Seller Detail page.</description>
    <label>Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>