metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__SearchTokens__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SearchTokens__c</fullName>
    <defaultValue>&quot;all&quot;</defaultValue>
    <description>Searchable text in addition to the other text fields on the Seller object. This can be used to tweak the search results. The text &quot;all&quot; should always be included in this field to allow searches for nearby Sellers without specifying any search key words (e.g. leaving the name field blank when searching for nearby sellers).</description>
    <label>Search Tokens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>