metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDesc__c</fullName>
    <description>HTML short description that displays on the Seller List page.</description>
    <label>Short Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>