metadata/force-app/main/default/objects/ccrz__E_Seller__c/fields/ccrz__WebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>ccrz__WebsiteURL__c</fullName>
    <description>Sellers external website URL.</description>
    <label>WebsiteURL</label>
    <type>Url</type>
</CustomField>